# uv installation: pip install uv
# create venv: uv venv
# compile dependencies: uv pip compile pyproject.toml -o requirements.txt
# compile dev windows dependencies: uv pip compile pyproject.toml -o requirements_windows.txt --extra dev --extra windows
# single installation example: uv pip install fastapi
# main installation: uv pip install -r requirements.txt
# main sync: uv pip sync requirements.txt
# dev installation: uv pip install -r requirements_windows.txt
# dev sync: uv pip sync requirements_windows.txt

[project]
name = "quantist_api"
version = "1.0.0"
dependencies = [
    "future",
    "fastapi",
    "orjson",
    "uvicorn[standard]",
    "gunicorn",
    "plotly",
    "kaleido",
    "sqlalchemy-bigquery @ git+https://github.com/googleapis/python-bigquery-sqlalchemy.git@v1.11.0.dev3",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "SQLAlchemy",
    "pyarrow",
    "scikit-learn",
    "pandas[performance]",
    "polars",
    "jinja2",
    "python-dotenv"
]

[project.optional-dependencies]
dev = ["ruff","uv", "asyncio","psycopg2"]
windows = ["kaleido==0.1.0.post1"]
